les deux moteur fonctionne

--- a/motor_controls.ws/src/ethercat_device_configurator/config_mot/setup.yaml
+++ b/motor_controls.ws/src/ethercat_device_configurator/config_mot/setup.yaml
@@ -6,12 +6,12 @@ ethercat_devices:
   - type:               Maxon
     name:               J1
     configuration_file: device_configurations/maxon.yaml
-    ethercat_bus:       enp0s8
+    ethercat_bus:       eth0
     ethercat_address:   1
 
-  # - type:               Maxon
-  #   name:               Mot2
-  #   configuration_file: device_configurations/maxon.yaml
-  #   ethercat_bus:       enp0s8
-  #   ethercat_address:   2
+  - type:               Maxon
+    name:               J2
+    configuration_file: device_configurations/maxon.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   2
 
