--- a/motor_controls.ws/src/ethercat_device_configurator/package.xml
+++ b/motor_controls.ws/src/ethercat_device_configurator/package.xml
@@ -22,6 +22,8 @@
   <depend>maxon_epos_ethercat_sdk</depend>
   <depend>motor_control_interfaces</depend>
   <depend>yaml-cpp</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
 
 
   <build_depend>rosidl_default_generators</build_depend>
