--- a/motor_controls.ws/src/ethercat_device_configurator/config_mot/setup.yaml
+++ b/motor_controls.ws/src/ethercat_device_configurator/config_mot/setup.yaml
@@ -9,9 +9,39 @@ ethercat_devices:
     ethercat_bus:       eth0
     ethercat_address:   1
 
-  # - type:               Maxon
-  #   name:               J2
-  #   configuration_file: device_configurations/maxon.yaml
-  #   ethercat_bus:       eth0
-  #   ethercat_address:   2
+  - type:               Maxon
+    name:               J2
+    configuration_file: device_configurations/maxon.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   2
+
+  - type:               Maxon
+    name:               J3
+    configuration_file: device_configurations/maxon.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   3
+
+  - type:               Maxon
+    name:               J4
+    configuration_file: device_configurations/maxon.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   4
+
+  - type:               Maxon
+    name:               J5
+    configuration_file: device_configurations/maxon.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   5
+
+  - type:               Maxon
+    name:               J6
+    configuration_file: device_configurations/maxon.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   6
+
+  - type:               Maxon
+    name:               Gripper
+    configuration_file: device_configurations/maxon.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   7
 
