--- a/motor_controls.ws/src/ethercat_device_configurator/config_mot/setup.yaml
+++ b/motor_controls.ws/src/ethercat_device_configurator/config_mot/setup.yaml
@@ -5,13 +5,44 @@ ethercat_master:
 ethercat_devices:
   - type:               Maxon
     name:               J1
-    configuration_file: device_configurations/maxon.yaml
+    configuration_file: device_configurations/conf_j1.yaml
     ethercat_bus:       eth0
     ethercat_address:   1
 
-  # - type:               Maxon
-  #   name:               J2
-  #   configuration_file: device_configurations/maxon.yaml
-  #   ethercat_bus:       eth0
-  #   ethercat_address:   2
+  - type:               Maxon
+    name:               J2
+    configuration_file: device_configurations/conf_j2.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   2
+
+  - type:               Maxon
+    name:               J3
+    configuration_file: device_configurations/conf_j3.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   4
+
+  - type:               Maxon
+    name:               J4
+    configuration_file: device_configurations/conf_j4.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   6
+  
+  - type:               Maxon
+    name:               J5
+    configuration_file: device_configurations/conf_j5.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   7
+
+  - type:               Maxon
+    name:               J6
+    configuration_file: device_configurations/conf_j6.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   8
+  
+  - type:               Maxon
+    name:               Gripper
+    configuration_file: device_configurations/conf_gripper.yaml
+    ethercat_bus:       eth0
+    ethercat_address:   3
+
 
